--- a/src/pod.yaml
+++ b/src/pod.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     run: nginx
   name: nginx
-  namespace: default
+  namespace: ghnew
 spec:
   containers:
   - image: nginx
